06_rect/grade.txt
Grading at Mon Aug 31 22:06:34 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:44:13: error: unused variable ‘r’ [-Werror=unused-variable]
   rectangle r;
             ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
